# InfoTecsTest

./: .gitignore  CMakeLists.txt  README.md
program1/: CMakeLists.txt  main1.cpp
program2/: CMakeLists.txt  main2.cpp
